# taskoto

./: Cargo.toml  test_database.db
src/: database.rs  main.rs  parser.rs  project.rs  sync.rs  task.rs  taskoto.rs  test.rs
